Linked list removal (#156)