@@ -23,8 +23,9 @@
 
 package net.sf.mpxj.mpp;
 
+import java.util.ArrayList;
 import java.util.Date;
-import java.util.LinkedList;
+import java.util.List;
 
 import net.sf.mpxj.Duration;
 import net.sf.mpxj.ProjectCalendar;
@@ -47,7 +48,7 @@ public class MPPTimephasedBaselineCostNormaliser implements TimephasedCostNormal
     * @param calendar current calendar
     * @param list list of assignment data
     */
-   @Override public void normalise(ProjectCalendar calendar, LinkedList<TimephasedCost> list)
+   @Override public void normalise(ProjectCalendar calendar, List<TimephasedCost> list)
    {
       if (!list.isEmpty())
       {
@@ -67,9 +68,9 @@ public class MPPTimephasedBaselineCostNormaliser implements TimephasedCostNormal
     * @param calendar current project calendar
     * @param list list of assignment data
     */
-   private void splitDays(ProjectCalendar calendar, LinkedList<TimephasedCost> list)
+   private void splitDays(ProjectCalendar calendar, List<TimephasedCost> list)
    {
-      LinkedList<TimephasedCost> result = new LinkedList<>();
+      List<TimephasedCost> result = new ArrayList<>();
       boolean remainderInserted = false;
 
       for (TimephasedCost assignment : list)
@@ -193,9 +194,9 @@ public class MPPTimephasedBaselineCostNormaliser implements TimephasedCostNormal
     *
     * @param list assignment data
     */
-   private void mergeSameDay(LinkedList<TimephasedCost> list)
+   private void mergeSameDay(List<TimephasedCost> list)
    {
-      LinkedList<TimephasedCost> result = new LinkedList<>();
+      List<TimephasedCost> result = new ArrayList<>();
 
       TimephasedCost previousAssignment = null;
       for (TimephasedCost assignment : list)
@@ -214,7 +215,7 @@ public class MPPTimephasedBaselineCostNormaliser implements TimephasedCostNormal
 
             if (previousAssignmentStartDay.getTime() == assignmentStartDay.getTime())
             {
-               result.removeLast();
+               result.remove(result.size()-1);
 
                double cost = previousAssignment.getTotalAmount().doubleValue();
                cost += assignment.getTotalAmount().doubleValue();
@@ -242,9 +243,9 @@ public class MPPTimephasedBaselineCostNormaliser implements TimephasedCostNormal
     *
     * @param list assignment data
     */
-   protected void mergeSameCost(LinkedList<TimephasedCost> list)
+   protected void mergeSameCost(List<TimephasedCost> list)
    {
-      LinkedList<TimephasedCost> result = new LinkedList<>();
+      List<TimephasedCost> result = new ArrayList<>();
 
       TimephasedCost previousAssignment = null;
       for (TimephasedCost assignment : list)
@@ -272,7 +273,7 @@ public class MPPTimephasedBaselineCostNormaliser implements TimephasedCostNormal
                merged.setAmountPerDay(assignmentCost);
                merged.setTotalAmount(Double.valueOf(total));
 
-               result.removeLast();
+               result.remove(result.size()-1);
                assignment = merged;
             }
             else
@@ -290,7 +291,7 @@ public class MPPTimephasedBaselineCostNormaliser implements TimephasedCostNormal
    }
 
    /*
-   private void dumpList(LinkedList<TimephasedCost> list)
+   private void dumpList(List<TimephasedCost> list)
    {
       System.out.println();
       for (TimephasedCost assignment : list)
