@@ -23,8 +23,9 @@
 
 package net.sf.mpxj.mpp;
 
+import java.util.ArrayList;
 import java.util.Date;
-import java.util.LinkedList;
+import java.util.List;
 
 import net.sf.mpxj.Duration;
 import net.sf.mpxj.ProjectCalendar;
@@ -43,9 +44,9 @@ public class MPPTimephasedBaselineWorkNormaliser extends MPPAbstractTimephasedWo
     * @param calendar current calendar
     * @param list assignment data
     */
-   @Override protected void mergeSameDay(ProjectCalendar calendar, LinkedList<TimephasedWork> list)
+   @Override protected void mergeSameDay(ProjectCalendar calendar, List<TimephasedWork> list)
    {
-      LinkedList<TimephasedWork> result = new LinkedList<>();
+      List<TimephasedWork> result = new ArrayList<>();
 
       TimephasedWork previousAssignment = null;
       for (TimephasedWork assignment : list)
@@ -64,8 +65,8 @@ public class MPPTimephasedBaselineWorkNormaliser extends MPPAbstractTimephasedWo
 
             if (previousAssignmentStartDay.getTime() == assignmentStartDay.getTime())
             {
-               result.removeLast();
-
+               result.remove(result.size() -1);
+               
                double work = previousAssignment.getTotalAmount().getDuration();
                work += assignment.getTotalAmount().getDuration();
                Duration totalWork = Duration.getInstance(work, TimeUnit.MINUTES);
